<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/stepTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/stepTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/stepTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/stepTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/section_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/timeTextView"
        app:layout_constraintTop_toBottomOf="@id/stepTitle"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/timeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/timeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/timeTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/section_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeTitle"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/section_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/alignment_btns_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/alignment_btns_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_btn"
        android:onClick="startClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stopBtn"
        app:layout_constraintStart_toEndOf="@id/alignment_btns_left"
        app:layout_constraintTop_toBottomOf="@id/section_separator"
        app:layout_constraintVertical_bias="0.29000002" />

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_btn"
        android:onClick="stopClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/alignment_btns_right"
        app:layout_constraintStart_toEndOf="@id/startBtn"
        app:layout_constraintTop_toTopOf="@id/startBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/showBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_btn"
        android:visibility="invisible"
        android:clickable="false"
        android:onClick="showClick"
        app:layout_constraintEnd_toStartOf="@id/resetBtn"
        app:layout_constraintStart_toEndOf="@id/alignment_btns_left"
        app:layout_constraintTop_toBottomOf="@id/section_separator"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_btn"
        android:visibility="invisible"
        android:clickable="false"
        android:onClick="resetClick"
        app:layout_constraintEnd_toStartOf="@id/alignment_btns_right"
        app:layout_constraintStart_toEndOf="@id/showBtn"
        app:layout_constraintTop_toTopOf="@id/showBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>